last commit hopefully, fixed white spacing and resume

--- a/css/main.css
+++ b/css/main.css
@@ -1545,20 +1545,14 @@ header .logo a {
 	font-size: 1.5rem;
 	line-height: 3rem;
 }
-.about-content .info-list li span {
+.about-content .info-list li span a{
 	display: block;
 	font-family: "poppins-regular", sans-serif;
 	color: #888888;
 	font-size: 1.5rem;
 	line-height: 1;
 }
-.about-content .info-list li a {
-	display: block;
-	font-family: "poppins-regular", sans-serif;
-	color: #888888;
-	font-size: 1.5rem;
-	line-height: 1;
-}
+
 .about-content .skill-bars {
 	margin-top: 6rem;
 }
